# WorldTrendScraper

./: .gitignore  COMMIT_MSG.txt  CONTRIBUTING.md  Dockerfile  GEMINI.md  Procfile  README.md  README.zh-TW.md  app.py  config.py  main.py  pyproject.toml  run-website.bat  worker.py
data/: bbc-ent-trends.json  bbc-jp-trends.json  bbc-news-trends.json  bbc-trad-trends.json  bbc-trends.json  google-trends.json  komica-trends.json  ptt-trends.json  reddit-all-hot.json  reddit-china-irl-hot.json  reddit-taiwanese-hot.json
scrapers/: bbc.py  google.py  ptt.py  reddit.py  schema.py  utils.py
templates/: index.html  layout.html
