[project]
name = "core-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "feedparser>=6.0.12",
    "flask>=3.1.2",
    "lxml>=6.0.2",
    "playwright>=1.55.0",
    "requests>=2.32.5",
    "gunicorn>=22.0.0",
]
